# Thib2108-senja-os

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/src/chatbox/: README.md
docs/: HARVEST.md  SETUP.md
docs/sprints/: SPRINT-01-surreal-spike.md  SPRINT-02-api-slice.md
services/api/: app.py  embeddings.py  events.py  gatesvc.py  models.py  pyproject.toml  test_surreal.py  test_surreal2.py  test_surreal3.py  test_surreal4.py  test_surreal5.py  test_surreal_txn.py
services/api/db/: surreal.py
services/api/db/migrations/: 0001_core.surql  0002_knowledge.surql  0003_registry_edges.surql
services/api/knowledge/: contracts.py  ontology_loader.py
services/api/knowledge/adapters/: __init__.py
services/api/knowledge/pipelines/: p1_ingest.py  p2_facets.py  p3_atomize.py  p4_topology.py  p5_trust.py
services/api/repos/: memory_impl.py  ports.py  surreal_impl.py
services/api/scripts/: bench_snapshot.py
services/api/tests/: conftest.py  test_gates.py  test_static_checks.py
services/api/tests/api/: test_api_slice.py
services/api/tests/contracts/: test_store_contracts.py
