[project]
name = "senja-api"
version = "0.1.0"
description = "Store of record, API seam, SSE fan-out, knowledge pipelines (SDAI-CHAT-003/004)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "sse-starlette",
    "pydantic>=2",
    "pydantic-ai",
    "python-ulid",
    "surrealdb",
    "harness-kernel",
    "contracts",
]

[project.optional-dependencies]
docling = ["docling"]  # optional group — absence degrades to plain-text adapter, never crashes the spine

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-timeout", "hypothesis", "ruff", "mypy", "httpx"]

[tool.uv.sources]
harness-kernel = { workspace = true }
contracts = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
timeout = 120  # any hang becomes a loud failure, never a zombie CI job
